config.json -> application_settings.json
deleted:
 applicationAssetsFolder
 applicationConfigFolder
 apiLogout
 logout
 restRequestDebugFlag
 tm1ExecuteMDX
 MDXUrl
 defaultMDXQuery
 defaultUploadTargetFolder
 defaultUploadStagingFolder
 subpath
 host
 tm1ApiHostBackend

MainPage -> mainPage

Export:

    cnf = setting.getConfig()
    target_url = cnf['tm1ApiHost']

    -->

    target_url = setting.getPoolTargetUrl()

required config:

  "pool": {
    "target": "https://kseed-dc1.knowledgeseed.local:5125/rochebpspapi"
  },